test/positive/feature_implicitsupercall.java

public class feature_implicitsupercall {
  public feature_implicitsupercall() { /* super(); */}
}

