test/negative/feature_explicitsupercall.java
public class feature_explicitsupercall {
  public feature_explicitsupercall() {}
  public feature_explicitsupercall() {  super(); }
}
